--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Haker</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </body>
 </html>
