--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Haker</title>
+    <title>Hacker</title>
   </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+  <body class="bg-[url('./images/hacker.jpg')] bg-cover bg-center bg-no-repeat">
+    <div class="min-h-screen">shanto</div>
     <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
