--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Hacker</title>
   </head>
   <body class="bg-[url('./images/hacker.jpg')] bg-cover bg-center bg-no-repeat">
-    <div class="min-h-screen">shanto</div>
+    <div class="min-h-screen flex items-center container mx-auto">
+      <h1 class="text-white text-6xl">Hello World</h1>
+    </div>
+
     <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
