--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body class="bg-[url('./images/hacker.jpg')] bg-cover bg-center bg-no-repeat">
     <div class="min-h-screen flex items-center container mx-auto">
-      <h1 class="text-white text-6xl">Hello World</h1>
+      <h1 class="text-white text-6xl">
+        Hi <br />
+        i am hacker!
+      </h1>
     </div>
 
     <script src="https://cdn.tailwindcss.com"></script>
